# Traffic

./: .gitignore  README.md  netlify.toml
.github/workflows/: cypress.yml  keepalive-render.yml  mobile-inspector-tests.yml
backend/: .env.example  README.md  alembic.ini  fix_image_paths.py  postman_collection.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_soft_delete_to_vehicles.py  0002_add_side_number.py  0003_add_owner_tin_fan_and_owner_documents.py
backend/app/: db.py  main.py  models.py  schemas.py  storage.py
backend/app/api/: admin.py  auth.py  deps.py  inspections.py  owners.py  vehicles.py
backend/tests/: test_auth.py  test_inspections.py  test_vehicles.py
mobile-inspector/: .env.example  README.md  app.json  jest.config.cjs  jest.setup.js  package-lock.json  package.json  tsconfig.json
mobile-inspector/__tests__/: VerifyScreen.test.tsx  errorMapping.test.ts  offline.test.ts  storage.test.ts  syncQueue.test.ts  theme.test.ts
mobile-inspector/src/: App.tsx  theme.ts  types.ts
mobile-inspector/test-scripts/: postman_collection.json
mobile-inspector/test-server/: index.js  package.json
new-web-admin/: .env.example  README.md  index.html  package-lock.json  tailwind.config.ts
new-web-admin/public/: README.md
new-web-admin/src/: App.tsx  index.css
web-admin/: .env.local.example  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.cjs  types.ts
zDocs/: additional_features.md  all_in_one.md  mobile-inspector.md  prompt.md  side_number.md  user_and_rbac.md  userflow.md
(+80 files in other folders)
